manifests/2048/2048-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "nginx-ingress"
  namespace: "2048-game"
  annotations:
    ingress.ticketmaster.com/scheme: internal
    ingress.ticketmaster.com/subnets: app-1.dev,app-2.dev,app-3.dev
    ingress.ticketmaster.com/security-groups: dev.onprem,dev.app,dev.web
  labels:
    app: 2048-nginx-ingress
spec:
  rules:
  - host: 2048.nonprod-tmaws.io
    http:
      paths:
      - path: /
        backend:
          serviceName: "service-2048"
          servicePort: 80
